# thunderbirb

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  shell.nix
src/: main.py
