[tool.poetry]
name = "wd40drink_bot"
version = "1.0.0"
description = "stupid discord bot"
authors = ["Cynosure-Null <cynosure@disroot.org>"]
license = "GNU-GPL V3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
